a little work on google map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,9 @@
 .nav {
 float: right;
 }
-
+#map {
+        height: 100%;
+      }
 
 /* Media Query styles
 -------------------------------------------------- */
