--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/** Here is the most amazingly awesome white belt coding ninja CSS  **/
+/** Here is the most amazingly awesome blue belt coding ninja CSS  **/
 
 /* Nav 
 -------------------------------------------------- */
