added some sass to it

--- a/assets/css/testm.scss
+++ b/assets/css/testm.scss
@@ -1,3 +1,19 @@
+/** Here is the most amazingly awesome blue belt coding ninja CSS  **/
+
+/* Nav 
+-------------------------------------------------- */
+.nav {
+float: right;
+}
+
+/* Media Query styles
+-------------------------------------------------- */
+#map {
+      
+        height: 400px;
+        width: 100%;
+      }
+
 $break-small: 320px;
 $break-large: 1024px;
 
